--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* ----- POPPINS FONT Link ----- */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
+@import url(https://fonts.googleapis.com/css2?family=REM:wght@100;200;400;500;600;700;800&display=swap);
+
 /* ----- VARIABLES ----- */
 :root{
     --body-color: rgb(250, 250, 250);
@@ -17,6 +19,48 @@
     --first-shadow-color: rgba(0, 0, 0, 0.1);
 
 }
+
+
+
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    background-color: var(--body-color);
+    cursor: pointer;  
+}
+  
+  #drop {
+    position: relative;
+    background-color: var(--first-color);
+    transition: 0.2s ease;
+  }
+
+  #drop:hover {
+    background-color: var(--text-color-third);
+    box-shadow: -0px -0px 30px var(--text-color-third);
+  }
+
+  .dropdown-menu li {
+    background-color: var(--text-color-third);
+    padding: x ;
+  }
+
+  .dropdown-menu li a:hover {
+    background-color: var(--first-color);
+    color: var(--color-white);
+  }
+
+  .dropdown-menu a {
+    text-align: center;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    text-overflow: var(--body-color);
+  }  
+
+
+
 
 /* ----- BASE ----- */
 *{
@@ -85,13 +129,13 @@ body{
 
 /* ----- NAVIGATION BAR ----- */
 nav{
-    position: fixed;
+    position: fixed 10px;
     display: flex;
     justify-content: space-between;
     width: 100%;
     height: 90px;
     line-height: 90px;
-    background: var(--body-color);
+    background: var(--color-white);
     padding-inline: 9vw;
     transition: .3s;
     z-index: 100;
@@ -232,21 +276,24 @@ nav{
 
 /* ----- FEATURED IMAGE BOX ----- */
 .featured-image{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    height: 80px;
-    width: 80px;
+    display: block;
+    justify-content: left;
+    align-content: left;
+    max-width: 100%;
+    width: 70px;
+    height: auto;  
 }
 .image{
-    margin: auto 0;
-    width: 580px;
-    height: 580px;
+    margin: left 0;
+    width: 380px;
+    height: 380px;
     animation: imgFloat 7s ease-in-out infinite;
 }
 .image img{
-    width: 580px;
-    height: 580px;
+    justify-content: left;
+    align-items: left;
+    width: 380px;
+    height: 380px;
     object-fit: contain;
 }
 @keyframes imgFloat {
@@ -544,7 +591,7 @@ footer{
 }
 
 /* ----- MEDIA QUERY == 900px / RESPONSIVE ----- */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 500px) {
     .nav-button{
         display: none;
     }
@@ -590,14 +637,16 @@ footer{
     }
     .featured-image{
         order: 1;
-        justify-content: center;
-        min-height: 150px;
-        width: 100%;
-        margin-top: 65px;
+        justify-content: left;
+        max-width: 100%;
+        height: auto;
+        margin-top: 35px;
+        width: 380px;
+        height: 380px;
     }
     .image, .image img{
-        width: 150px;
-        height: 150px;
+        width: 380px;
+        height: 380px;
     }
     .row{
         display: flex;
